namespace-lb-demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lb-demo
spec:
  finalizers:
  - kubernetes
