deploymentConfig-nginx.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app: nginx
    app.kubernetes.io/component: nginx
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/part-of: Demo
    app.openshift.io/runtime: nginx
  name: nginx
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    name: nginx
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        name: nginx
      name: nginx
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/openshift/nginx:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        name: nginx-example
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          limits:
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: config
          subPath: nginx.conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx-conf
        name: config
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - nginx-example
      from:
        kind: ImageStreamTag
        name: nginx:latest
        namespace: openshift
    type: ImageChange
  - type: ConfigChange
