route-nginx.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
spec:
  host: nginx-lb-demo.apps-crc.testing
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
